extractor/tests/snapshots/test_inputs__failing__class_with_unused_tags.lua-stderr.snap
---
source: tests/test-inputs.rs
expression: stderr
---
error: This tag is mutually exclusive...
  ┌─ test-input/failing/class_with_unused_tags.lua:2:2
  │
2 │     @class Foobar
  │     ^^^^^^^^^^^^^ This tag is mutually exclusive...
  ·
5 │     @return string -- a string
  │     -------------------------- ...with this tag.

error: This tag is mutually exclusive...
  ┌─ test-input/failing/class_with_unused_tags.lua:2:2
  │
2 │     @class Foobar
  │     ^^^^^^^^^^^^^ This tag is mutually exclusive...
3 │     @yields
4 │     @error E -- This
  │     ---------------- ...with this tag.

error: This tag is mutually exclusive...
  ┌─ test-input/failing/class_with_unused_tags.lua:2:2
  │
2 │     @class Foobar
  │     ^^^^^^^^^^^^^ This tag is mutually exclusive...
3 │     @yields
  │     ------- ...with this tag.

error: This tag is mutually exclusive...
  ┌─ test-input/failing/class_with_unused_tags.lua:7:2
  │
7 │     @unreleased
  │     ^^^^^^^^^^^ This tag is mutually exclusive...
8 │     @since v0.1.0
  │     ------------- ...with this tag.

error: This tag is mutually exclusive...
  ┌─ test-input/failing/class_with_unused_tags.lua:7:2
  │
7 │     @unreleased
  │     ^^^^^^^^^^^ This tag is mutually exclusive...
8 │     @since v0.1.0
9 │     @deprecated v1.0.0
  │     ------------------ ...with this tag.

error: aborting due to diagnostic error
